Archive2/ff/a5d91be475dc1a/output
main.cpp:2:6: error: redefinition of 'foo' as different kind of symbol
void foo();
     ^
main.cpp:1:23: note: previous definition is here
typedef struct foo {} foo;
                      ^
1 error generated.
